@@ -16,25 +16,21 @@
 number of callbacks to be associated with each connection. In
 pycurl, callbacks are defined using the <code>setopt()</code> method for
 Curl objects with options WRITEFUNCTION, READFUNCTION, HEADERFUNCTION,
-PROGRESSFUNCTION, PASSWDFUNCTION or DEBUGFUNCTION. These options
+PROGRESSFUNCTION or DEBUGFUNCTION. These options
 correspond to the libcurl options with CURLOPT_* prefix removed.  A
 callback in pycurl must be either a regular Python function, a class
 method or an extension type function.</p>
 
 <p>There are some limitations to some of the options which can be used
-concurrently with the pycurl callbacks compared to the libcurl
-callbacks.  This is to allow different callback functions to be
-associated with different Curl objects.  More specifically,
-WRITEFUNCTION cannot be used with WRITEDATA, READFUNCTION cannot be
-used with READDATA, HEADERFUNCTION cannot be used with WRITEHEADER,
-PROGRESSFUNCTION cannot be used with PROGRESSDATA, PASSWDFUNCTION
-cannot be used with PASSWDDATA and DEBUGFUNCTION cannot be used with
-DEBUGDATA.  In practice, these limitations can be overcome by having a
-callback function be a class instance method and rather use the class
-instance attributes to store per object data used in the callbacks.</p>
-
-<p>Note that the use of PASSWDFUNCTION has been deprecated in libcurl
-and will be removed from pycurl.</p>
+concurrently with the pycurl callbacks compared to the libcurl callbacks.
+This is to allow different callback functions to be associated with
+different Curl objects.  More specifically, WRITEFUNCTION cannot
+be used with WRITEDATA, READFUNCTION cannot be used with READDATA,
+HEADERFUNCTION cannot be used with WRITEHEADER, PROGRESSFUNCTION cannot be
+used with PROGRESSDATA, and DEBUGFUNCTION cannot be used with DEBUGDATA.
+In practice, these limitations can be overcome by having a callback
+function be a class instance method and rather use the class instance
+attributes to store per object data used in the callbacks.</p>
 
 The signature of each callback used in pycurl is as follows:<br/>
 <br/>
@@ -47,9 +43,6 @@ string</em><br/>
 <code>HEADERFUNCTION(</code><em>string</em><code>)</code><em> -&gt; number of characters written<br/>
 </em><br/>
 <code>PROGRESSFUNCTION(</code><em>download total, downloaded, upload total, uploaded</em><code>) </code><em>-&gt; status</em><br/>
-<br/>
-<code>PASSWDFUNCTION(</code><em>prompt string, max number of characters to read</em><code>)</code>
-<em>-&gt; string</em><br/>
 <br/>
 <code>DEBUGFUNCTION(</code><em>debug message type, debug message string</em><code>)</code>
 <em>-&gt; None<br/></em>
